<resources>
    <string name="app_name">Calculadora Média</string>
    <string name="nome_aluno">Nome do Aluno</string>
    <string name="campo_nome">Digite o nome do aluno</string>
    <string name="nota1">Nota 1</string>
    <string name="campo_nota1">Digite a primeira nota</string>
    <string name="nota2">Nota 2</string>
    <string name="campo_nota2">Digite a segunda nota</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpar">Limpar Dados</string>
    <string name="aluno">Aluno: </string>
    <string name="media">Média: </string>
    <string name="situacao">Situação: </string>
    <string name="aprovado">Aprovado</string>
    <string name="reprovado">Reprovado</string>
</resources>
