<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_aluno"
        style="@style/textView"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_nome"
        android:id="@+id/nome"
        style="@style/textField"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota1"
        style="@style/textView"
        android:paddingTop="15sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_nota1"
        android:id="@+id/nota1"
        style="@style/textField"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota2"
        style="@style/textView"
        android:paddingTop="15sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campo_nota2"
        android:id="@+id/nota2"
        style="@style/textField"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            android:id="@+id/btnCalcular"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_limpar"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:textColor="#FFF"
            android:id="@+id/btnLimpar"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:id="@+id/aluno"
        style="@style/textView"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:id="@+id/media"
        style="@style/textView"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:id="@+id/situacao"
        style="@style/textView"
        />

</LinearLayout>